--- a/indox.html
+++ b/indox.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Word</h1>
+    <h1>Olá mundo do Git e do Github!</h1>
+    <script src="index.js"></script>
 </body>
 </html>
